src/objects/DRE__DTE_Assert__c.object
<CustomObject>
    <fields>
        <fullName>DRE__DTE_Group__c</fullName>
        <label>DTE Assert Group</label>
        <referenceTo>DRE__DTE_Assert_Group__c</referenceTo>
        <relationshipLabel>Asserts</relationshipLabel>
        <relationshipName>DTE_Asserts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__DTE_Plan__c</fullName>
        <label>DTE Plan</label>
        <referenceTo>DRE__DTE_Plan__c</referenceTo>
        <relationshipLabel>Plan Asserts</relationshipLabel>
        <relationshipName>DTE_Asserts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>CONTAINS</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
                <value>
                    <fullName>NOT CONTAINS</fullName>
                </value>
                <value>
                    <fullName>STARTS WITH</fullName>
                </value>
                <value>
                    <fullName>ENDS WITH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Value__c</fullName>
        <label>Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DTE Assert</label>
    <nameField>
        <displayFormat>DTEASR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Asserts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>